<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_sort_popular">Sort by popularity</string>
    <string name="action_sort_rated">Sort by ratings</string>
    <string name="error_message">Please connect to the internet!</string>
    <string name="action_sort_by">Sort by</string>
    <string name="release_date">Release Date</string>
    <string name="detail_activity_title">Movie Detail</string>
    <string name="main_activity_title_popular">Most Popular Movies</string>
    <string name="main_activity_rate">Top Rated Movies</string>
    <string name="content_authority">com.jablonkai.tamas.popularmovies</string>
    <string name="tv_trailers">Trailers</string>
    <string name="tv_reviews">Reviews</string>
    <string name="action_sort_favorites">Favorites</string>
    <string name="main_activity_favorites">Favorites</string>
    <string name="action_favorite">Favorite</string>
    <string name="reviews_more">More</string>
    <string name="review_activity_title">Reviews</string>
</resources>
