<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:textSize="@dimen/movie_title_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="Movie Title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/detail_margin_top">

            <ImageView
                android:id="@+id/iv_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <LinearLayout
                android:id="@+id/ll_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/detail_margin_info"
                android:layout_marginTop="@dimen/detail_margin_top"
                android:layout_weight="1"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tv_release_date_text"
                    android:text="@string/release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:id="@+id/tv_release_date"
                    tools:text="2017.01.23."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_average_vote"
                    tools:text="7/10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/detail_margin_top" />

                <TextView
                    android:id="@+id/tv_vote_count"
                    tools:text="100"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tv_error_message_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/error_message"
                    android:textSize="@dimen/error_message_text"
                    android:visibility="gone"
                    android:layout_centerHorizontal="true"/>

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:visibility="invisible"
                tools:visibility="visible"
                android:layout_weight="1"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_overview"
            tools:text="Short description of the movie."
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_top" />

        <TextView
            android:id="@+id/tv_trailers"
            android:text="@string/tv_trailers"
            android:textSize="@dimen/movie_subcat_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_margin_top"
            android:visibility="gone"
            tools:visibility="visible"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/detail_margin_top"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/detail_margin_top">

                <TextView
                    android:id="@+id/tv_reviews"
                    android:text="@string/tv_reviews"
                    android:textSize="@dimen/movie_subcat_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/reviews_more"
                    android:text="@string/reviews_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    tools:visibility="visible" />

        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/detail_margin_top"
            android:id="@+id/tv_reviewer1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Reviewer" />

        <TextView
            android:id="@+id/tv_review1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="review review review review review review review review review review review review review review review review review review review review review review review review review review review " />

        <TextView
            android:id="@+id/tv_reviewer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Reviewer" />

        <TextView
            android:id="@+id/tv_review2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="review review review review review review review review review review review review review review review review review review review review review review review review review review review " />

        <TextView
            android:id="@+id/tv_reviewer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="Reviewer" />

        <TextView
            android:id="@+id/tv_review3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:padding="2dp"
            android:visibility="gone"
            tools:visibility="visible"
            tools:text="review review review review review review review review review review review review review review review review review review review review review review review review review review review " />

    </LinearLayout>

</ScrollView>